[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tic-tac-toe-game"
version = "1.0.0"
description = "A classic Tic Tac Toe game with graphical interface using Tkinter"
readme = "README.md"
authors = [
    {name = "lukaszplk", email = "lpolowski@protonmail.com"}
]
license = "MIT"
keywords = ["tic-tac-toe", "game", "tkinter", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Board Games",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/lukaszplk/tic_tac_toe"
Repository = "https://github.com/lukaszplk/tic_tac_toe"
Issues = "https://github.com/lukaszplk/tic_tac_toe/issues"

[project.scripts]
tic-tac-toe = "tic_tac_toe_game.tictactoe:start_game"

[tool.setuptools.packages.find]
where = ["."]
include = ["tic_tac_toe_game*"]
